Bug 571637: Put the Custom Search (formerly "Boolean Charts") UI behind a show/hide widget r=mkanat, a=mkanat

--- a/skins/standard/search_form.css
+++ b/skins/standard/search_form.css
@@ -176,6 +176,14 @@ div.bz_section_title span {
   font-weight: bold;
 }
 
+#queryform, #reportform {
+  margin-bottom: 2em;
+}
+
+#knob {
+  margin-top: 2em;
+}
+
 .hide_people_filter #people_filter_section, 
 .hide_history_filter #history_filter_section, 
 .hide_detailed_information #detailed_information_section 
